# evalsmith-

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-full.txt  requirements.txt
.claude/: settings.example.json
.claude/agents/: architect.md  auditor.md  curator.md  inspector.md  mediator.md  operator.md  provoker.md  scout.md  sentinel.md  strategist.md
.claude/commands/: contribute.md  init.md  plan.md  resume.md  run.md  status.md
docs/: DATABASES_AND_CHAT.md  DOCKER_DEPLOY.md  NONTECH_GUIDE.md  PDF_RAG_GUIDE.md  README.md  TEAM_ONBOARDING.md  WALKTHROUGH.md
knowledge/: eval_judge_templates.jsonl  failure_modes.jsonl  model_route_priors.jsonl  prompt_pattern_library.jsonl  rag_recipes.jsonl
lib/: __init__.py  agent_inbox.py  bandit.py  budget.py  chat.py  cli.py  corpus.py  db.py  doom_loop.py  eval.py  eval_gen.py  finalize.py  headless_optimizer.py  judges.py  redteam.py  registry.py  retrieval.py  run.py  skeptic.py  state.py  variants.py
lib/capabilities/: __init__.py  base.py  chatbot.py  insight_agent.py  nlq.py  rag_tuning.py  registry.py  research_agent.py  search_engine.py
lib/domains/: __init__.py  code_assistant.py  extraction.py  general.py  search_qa.py  support_bot.py
lib/schemas/: __init__.py  (+7 more)
mcp_servers/: budget_server.py  eval_sketch_server.py  judge_server.py  retrieval_server.py
recipes/: chatbot_support.json  insight_extraction.json  nlq_sql.json  rag_qa.json  research_citation.json  search_engine.json
seeds/: universal_seeds.jsonl
tests/: __init__.py  test_bandit_and_doom_loop.py  test_corpus.py  test_db.py  test_end_to_end_stub.py  test_eval_gen.py  test_schemas.py  test_skeptic.py
tools/: audit_repo.py  ingest_pdfs.py  introspect_db.py  post_merge_extractor.py  replay_runner.py
web/: __init__.py  api.py  services.py
webui/: __init__.py  app.py  headless_optimizer.py  lib_glue.py
(+25 files in other folders)
